<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="none">

        <item
            android:id="@+id/home"
            android:title="@string/home"
            />
<!--        android:icon="@drawable/boxessvg"-->
<!--        app:actionLayout="@layout/arrow"-->
        <item
            android:id="@+id/ourProducts"
            android:title="@string/our_products"
            android:visible="false"
            />

        <item
            android:id="@+id/aboutSiyam"
            android:title="@string/about_siyam_group"
            />

        <item
            android:id="@+id/contactUs"
            android:title="@string/contact_us"

            />

        <item
            android:id="@+id/logout"
            android:title="Logout"

            />

    </group>
</menu>



