<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/photo3"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >




    <TextView
        android:id="@+id/tvfirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="70dp"
/>


<EditText
    android:id="@+id/firstNameET"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    app:layout_constraintTop_toBottomOf="@+id/tvfirstName"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    android:background="@drawable/custom_rectangle"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    app:cornerRadius="10dp"
    android:backgroundTint="@color/white"
    android:layout_marginTop="10dp"
    />




    <TextView
        android:id="@+id/tvCompanyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company_name"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/firstNameET"
        />


    <EditText
        android:id="@+id/companyNameET"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/custom_rectangle"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:cornerRadius="10dp"
        android:backgroundTint="@color/white"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tvCompanyName"
        />


    <TextView
        android:id="@+id/tvEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/companyNameET"
        />


    <EditText
        android:id="@+id/emailAddressET"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/custom_rectangle"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:cornerRadius="10dp"
        android:backgroundTint="@color/white"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/tvEmailAddress"
        />




    <TextView
        android:id="@+id/tvPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/emailAddressET"
        />


    <EditText
        android:id="@+id/phoneNumberET"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/custom_rectangle"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:cornerRadius="10dp"
        android:backgroundTint="@color/white"
        android:layout_marginTop="10dp"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/tvPhoneNumber"
        />





    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumberET"
        />


    <EditText
        android:id="@+id/passwordET"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/custom_rectangle"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:inputType="textPassword"
        app:cornerRadius="10dp"
        android:backgroundTint="@color/white"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword"
        />



    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in_button"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="50dp"
        android:padding="15dp"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF"
        android:textSize="13sp"
        android:textAllCaps="false"
        app:cornerRadius="10dp"
        android:textStyle="bold"
        android:backgroundTint="#2F71B6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/passwordET"
        app:strokeWidth="2dp" />



</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>