<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/photo1"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="30dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="100dp"
            />


        <EditText
            android:id="@+id/userNameET"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/custom_rectangle"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:cornerRadius="10dp"
            android:backgroundTint="@color/white"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/tvUserName"
            />





        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/userNameET"
            />


        <EditText
            android:id="@+id/passwordET"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/custom_rectangle"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:cornerRadius="10dp"
            android:inputType="textPassword"
            android:backgroundTint="@color/white"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/tvPassword"
            />



        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_in_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginTop="50dp"
            android:padding="15dp"
            android:text="@string/sign_in"
            android:textColor="#FFFFFF"
            android:textSize="13sp"
            android:textAllCaps="false"
            app:cornerRadius="10dp"
            android:textStyle="bold"
            android:backgroundTint="#105BA9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordET"
            app:strokeWidth="2dp" />


        <ProgressBar
            android:id="@+id/pd"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"
            app:layout_constraintVertical_bias="0.767" />

        <TextView
            android:id="@+id/toRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="or"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_button"
            />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:padding="15dp"
            android:text="@string/register"
            android:textColor="#FFFFFF"
            android:textSize="13sp"
            android:textAllCaps="false"
            app:cornerRadius="10dp"
            android:textStyle="bold"
            android:backgroundTint="#105BA9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:rippleColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/toRegister"
            app:strokeWidth="2dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>